<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainlayout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="116dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/pick_a_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4s"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dice_4"
        app:layout_constraintBottom_toTopOf="@+id/button8s"
        app:layout_constraintEnd_toStartOf="@+id/button6s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6s"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dice_6"
        app:layout_constraintBottom_toBottomOf="@+id/button4s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4s"
        app:layout_constraintTop_toTopOf="@+id/button4s" />

    <Button
        android:id="@+id/button8s"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dice_8"
        app:layout_constraintBottom_toTopOf="@+id/button12s"
        app:layout_constraintEnd_toStartOf="@+id/button10s"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4s" />

    <Button
        android:id="@+id/button10s"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dice_10"
        app:layout_constraintBottom_toBottomOf="@+id/button8s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8s"
        app:layout_constraintTop_toTopOf="@+id/button8s" />

    <Button
        android:id="@+id/button12s"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dice_12"
        app:layout_constraintBottom_toTopOf="@+id/button100s"
        app:layout_constraintEnd_toStartOf="@+id/button20s"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8s" />

    <Button
        android:id="@+id/button20s"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dice_20"
        app:layout_constraintBottom_toBottomOf="@+id/button12s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button12s"
        app:layout_constraintTop_toTopOf="@+id/button12s" />

    <Button
        android:id="@+id/button100s"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="475dp"
        android:text="@string/double_dice_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12s" />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="185dp"
        android:gravity="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button100s" />

    <Button
        android:id="@+id/buttonGhost"
        android:layout_width="141dp"
        android:layout_height="62dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="113dp"
        android:text="Button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>